--- a/quiz.html
+++ b/quiz.html
@@ -278,6 +278,7 @@ function inputAction10() {
 </script>
 <div class="body">
 <button id="showscore">Show Score</button>
+<button id="showcomment">Show Comment</button>
 <h2 class="score4">Your score was: <span class="score" id="score3">...</span></h2>
 <h1 id="comment">...</h1>
 </div>
@@ -310,6 +311,6 @@ function Comment3() {
     comment.textContent = "Full marks, congratulations!";
 }
 }
-showscore.onclick = Comment3
+showcomment.onclick = Comment3
 showscore.onclick = showscore9
 </script>
