--- a/quiz.html
+++ b/quiz.html
@@ -278,15 +278,12 @@ function inputAction10() {
 </script>
 <div class="body">
 <button id="showscore">Show Score</button>
-<button id="showcomment">Show Comment</button>
 <h2 class="score4">Your score was: <span class="score" id="score3">...</span></h2>
 <h1 id="comment">...</h1>
 </div>
 <script>
-function showscore9() {
-  score3.textContent = score5.textContent;
-}
 function Comment3() {
+  score3.textContent = score5.textContent;
   if (score5.textContent == "0") {
     comment.textContent = "How did you get them all wrong?";
 } else if (score5.textContent == "1") {
@@ -311,6 +308,5 @@ function Comment3() {
     comment.textContent = "Full marks, congratulations!";
 }
 }
-showcomment.onclick = Comment3
-showscore.onclick = showscore9
+showscore.onclick = Comment3
 </script>
