--- a/eiffel-tower.html
+++ b/eiffel-tower.html
@@ -1,6 +1,8 @@
+<!DOCTYPE html>
+<link rel="Stylesheet" href="eiffel-tower.css">
 <html>
 <head>
-	<title>La Tour Eiffel</title>
+	<title>The Eiffel Tower</title>
 </head>
 
 <body>
@@ -8,7 +10,13 @@
 	<h2>Paris, France</h2>
 	<h3>Constructed 1887-1889</h3>
 
-	<img src="http://bit.ly/1UuWAmt", width="320" height="400" alt="La Tour Eiffel">
-
+	<img src="tour_eiffel.jpg", width="400" height="320" alt="The Eiffel Tower">
+    <p>Click <a href="https://www.youtube.com/watch?v=r65KAj2sB0U">here</a> to see a video of the construction of the Eiffel Tower</p>
+    <h2>The construction schedule</h2>
+	<ol>
+	  <li>The first floor was completed on the 1st April 1888</li>
+	  <li>The second floor was completed on the 14th August 1888</li>
+	  <li>The top section was completed on the 31st March 1889</li>
+	</ol>
 </body>
 </html>
