--- a/eiffel-tower.html
+++ b/eiffel-tower.html
@@ -18,5 +18,12 @@
 	  <li>The second floor was completed on the 14th August 1888</li>
 	  <li>The top section was completed on the 31st March 1889</li>
 	</ol>
+	<h2>Facts and Figures</h2>
+	<ul>
+	  <li>The tower has 1665 steps</li>
+	  <li>2.5 million rivets were used</li>
+	  <li>7300 tonnes of iron</li>
+	  <li>60 tonnes of paint</li>
+	</ul>
 </body>
 </html>
