--- a/eiffel-tower.html
+++ b/eiffel-tower.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<link rel="Stylesheet" href="eiffel-tower.css">
+<link rel="Stylesheet" href="eiffel-tower.css" type="text/css">
 <html>
 <head>
 	<title>The Eiffel Tower</title>
