--- a/eiffel-tower.html
+++ b/eiffel-tower.html
@@ -6,12 +6,15 @@
 </head>
 
 <body>
+<div id="page"> 
 	<h1>La Tour Eiffel</h1>
 	<h2>Paris, France</h2>
 	<h3>Constructed 1887-1889</h3>
-
+    <div id="left-column">
 	<img src="tour_eiffel.jpg", width="400" height="320" alt="The Eiffel Tower">
     <p>Click <a href="https://www.youtube.com/watch?v=r65KAj2sB0U">here</a> to see a video of the construction of the Eiffel Tower</p>
+	</div>
+	<div id="right-column">
     <h2>The construction schedule</h2>
 	<ol>
 	  <li>The first floor was completed on the 1st April 1888</li>
@@ -25,5 +28,7 @@
 	  <li>7300 tonnes of iron</li>
 	  <li>60 tonnes of paint</li>
 	</ul>
+	</div>
+</div>
 </body>
 </html>
