--- a/eiffel-tower.html
+++ b/eiffel-tower.html
@@ -10,7 +10,7 @@
 	<h1>La Tour Eiffel</h1>
 	<h2>Paris, France</h2>
 	<h3>Constructed 1887-1889</h3>
-    <div id="left-column">
+    <div id="left-column" style="float: left; text-align: center; width: 400px;">
 	<img src="tour_eiffel.jpg", width="400" height="320" alt="The Eiffel Tower">
     <p>Click <a href="https://www.youtube.com/watch?v=r65KAj2sB0U">here</a> to see a video of the construction of the Eiffel Tower</p>
 	</div>
