--- a/Tully Monster.html
+++ b/Tully Monster.html
@@ -11,9 +11,9 @@
 <h1>The Tully Monster</h1>
 
 <p>The Tully Monster is a fossilised creature believed to have lived 300 million years ago. It was discovered by and named after Francis Tully in 1958.</p>
-
+<div id="monster">
 <img src="TullyMonster.png">
-
+</div>
 <form name="question">
 <p id="box">Question - How long was the Tully Monster?</p> 
 <p>Answer: <input type="text" name="answer"></p>
@@ -31,6 +31,13 @@ function validate() {
 	}
     }
 }
+function showHide() {
+   var x = document.getElementById("monster");
+   if(x.style.display == 'block')
+        x.style.display = 'none';
+    else 
+	    x.style.display = 'block';
+	}
 </script>
 </body>
 </html>
