--- a/Tully Monster.html
+++ b/Tully Monster.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>The Tully Monster ok</title>
+	<title>The Tully Monster</title>
 	<style>
 		body {font-family: arial, "sans-serif";}
 	</style>
@@ -26,10 +26,10 @@ function validate() {
    var x = document.forms["question"]["answer"].value;
    if (x == "") {
         document.getElementById("box").style.color="red";
+	}
 	else if (x == "35cm"){
 	   alert("Correct!");
 	}
-    }
 }
 function showHide() {
    var x = document.getElementById("monster");
