--- a/Tully Monster.html
+++ b/Tully Monster.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>The Tully Monster ok</title>
+	<title>The Tully Monster</title>
 	<style>
 		body {font-family: arial, "sans-serif";}
 	</style>
