--- a/Tully Monster.html
+++ b/Tully Monster.html
@@ -14,6 +14,7 @@
 <div id="monster">
 <img src="TullyMonster.png">
 </div>
+<button type="button" onclick="showHide()">Hide/Show Image</button> 
 <form name="question">
 <p id="box">Question - How long was the Tully Monster?</p> 
 <p>Answer: <input type="text" name="answer"></p>
