--- a/Tully Monster.html
+++ b/Tully Monster.html
@@ -22,6 +22,7 @@
 <button type="button" onclick="validate()">Show answer</button>
 <p id="box2">Click below to find out where it lived.</p>
 <button type="button" onclick="document.getElementById('box2').innerHTML = 'It lived in the tropical estuaries of Illinois, USA'">Show habitat</button>
+<button type="button" onclick="goodbye()">Say goodbye</button>
 <script>
 function validate() {
    var x = document.forms["question"]["answer"].value;
@@ -38,7 +39,10 @@ function showHide() {
         x.style.display = 'none';
     else 
 	    x.style.display = 'block';
-	}
+}
+function goodbye() {
+    document.write("<h1>Goodbye World!</h1>")
+}
 </script>
 </body>
 </html>
