--- a/javier.html
+++ b/javier.html
@@ -22,27 +22,27 @@
 <h1>Now let's create a similar page of your favourite things.<h1>
 <h4>What is your first category? e.g. food or racing</h4>
 <p><input id="Category1"></p>
-<h6>What is the first thing you would like to put un that category?</h6>
+<h6>What is the first thing you would like to put in that category?</h6>
 <p><input id="Thing1"></p>
-<h6>What is the second thing you would like to put un that category?</h6>
+<h6>What is the second thing you would like to put in that category?</h6>
 <p><input id="Thing2"></p>
-<h6>What is the third thing you would like to put un that category?</h6>
+<h6>What is the third thing you would like to put in that category?</h6>
 <p><input id="Thing3"></p>
 <h4>What is your second category?</h4>
 <p><input id="Category2"></p>
-<h6>What is the first thing you would like to put un that category?</h6>
+<h6>What is the first thing you would like to put in that category?</h6>
 <p><input id="Thing4"></p>
-<h6>What is the second thing you would like to put un that category?</h6>
+<h6>What is the second thing you would like to put in that category?</h6>
 <p><input id="Thing5"></p>
-<h6>What is the third thing you would like to put un that category?</h6>
+<h6>What is the third thing you would like to put in that category?</h6>
 <p><input id="Thing6"></p>
 <h4>What is your third category?</h4>
 <p><input id="Category3"></p>
-<h6>What is the first thing you would like to put un that category?</h6>
+<h6>What is the first thing you would like to put in that category?</h6>
 <p><input id="Thing7"></p>
-<h6>What is the second thing you would like to put un that category?</h6>
+<h6>What is the second thing you would like to put in that category?</h6>
 <p><input id="Thing8"></p>
-<h6>What is the third thing you would like to put un that category?</h6>
+<h6>What is the third thing you would like to put in that category?</h6>
 <p><input id="Thing9"></p>
 <h4>What colour do you want the border to be?</h4>
 <p><button id="blueborder">Blue</button><button id="redborder">Red</button><button id="greenborder">Green</button></p>
@@ -192,6 +192,6 @@ Category3.oninput = Category3Action
 Thing7.oninput = Thing7Action
 Thing8.oninput = Thing8Action
 Thing9.oninput = Thing9Action
-</script
+</script>
 
 
