--- a/javier.html
+++ b/javier.html
@@ -148,40 +148,40 @@ function greenthingAction() {
   Thing29.classList.add('greenthings');
 }
 function Category1Action() {
-  Category21.textContent = Category1.value;
+  Category21.textContent = Category1.textContent;
 }
 function Thing1Action() {
-  Thing21.textContent = Thing1.value;
+  Thing21.textContent = Thing1.textContent;
 }
 function Thing2Action() {
-  Thing22.textContent = Thing2.value;
+  Thing22.textContent = Thing2.textContent;
 }
 function Thing3Action() {
-  Thing23.textContent = Thing3.value;
+  Thing23.textContent = Thing3.textContent;
 }
 function Category2Action() {
-  Category22.textContent = Category2.value;
+  Category22.textContent = Category2.textContent;
 }
 function Thing4Action() {
-  Thing24.textContent = Thing4.value;
+  Thing24.textContent = Thing4.textContent;
 }
 function Thing5Action() {
-  Thing25.textContent = Thing5.value;
+  Thing25.textContent = Thing5.textContent;
 }
 function Thing6Action() {
-  Thing26.textContent = Thing6.value;
+  Thing26.textContent = Thing6.textContent;
 }
 function Category3Action() {
-  Category23.textContent = Category3.value;
+  Category23.textContent = Category3.textContent;
 }
 function Thing7Action() {
-  Thing27.textContent = Thing7.value;
+  Thing27.textContent = Thing7.textContent;
 }
 function Thing8Action() {
-  Thing28.textContent = Thing8.value;
+  Thing28.textContent = Thing8.textContent;
 }
 function Thing9Action() {
-  Thing29.textContent = Thing9.value;
+  Thing29.textContent = Thing9.textContent;
 }
 blueborder.onclick = blueborderAction
 redborder.onclick = redborderAction
