--- a/javier.html
+++ b/javier.html
@@ -1,4 +1,7 @@
 <!DOCTYPE html>
+<head>
+<title>Create your own webpage</title>
+</head>
 <link rel="stylesheet" href="javier2.css">
 <p class="my" id="my">
 <h1>My Favourite Things<h1>
