--- a/maths.html
+++ b/maths.html
@@ -59,7 +59,7 @@ function inputAction2() {
 </script>
 <div class="body">
 <p><strong>What is 5+3x8?</strong></p>
-<p><input id="answer3" type="range" min="0" max="100000000" step="5000000"><span id="rangevalue1">50000000</span></p>
+<p><input id="answer3" type="range" min="0" max="50" step="1"><span id="rangevalue1">50000000</span></p>
 <p><button id="button3">Check answer</button></p>
 <div class="reveal">
 <h1 id="result3">...</h1>
@@ -169,7 +169,7 @@ function inputAction6() {
 </script>
 <div class="body">
 <p><strong>Solve for x: 14-x=5x-4?</strong></p>
-<p><input id="answer7" type="range" min="0" max="200" step="5"><span id="rangevalue2"></span></p>
+<p><input id="answer7" type="range" min="0" max="10" step="1"><span id="rangevalue2"></span></p>
 <p><button id="button7">Check answer</button></p>
 <div class="reveal">
 <h1 id="result7">...</h1>
