--- a/Tully Monster.html
+++ b/Tully Monster.html
@@ -22,7 +22,7 @@
 <button type="button" onclick="validate()">Show answer</button>
 <p id="box2">Click below to find out where it lived.</p>
 <button type="button" onclick="document.getElementById('box2').innerHTML = 'It lived in the tropical estuaries of Illinois, USA'">Show habitat</button>
-<button type="button" onclick="goodbye()">Say goodbye</button>
+<p><button type="button" onclick="goodbye()">Say goodbye</button></p>
 <script>
 function validate() {
    var x = document.forms["question"]["answer"].value;
